--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Website Files/styles/style.css">
+    <link rel="stylesheet" href="Website Files/styles/custom-carousel.css">
     <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet'>
     <link rel="icon" type="image/x-icon" href="Website Files/assets/MT Greenhouse Favicon.png">
     <title>Monty Tech Greenhouse | Home</title> <!--DELETE "PROJECT" WHEN FINISHED-->
@@ -55,7 +56,7 @@
     
     <div class="container-fluid p-5">
         <div class="row text-light">
-            <div class="col-sm-10 m-auto flwr-bknd border border-success border-5 p-5 rounded text-end">
+            <div class="col-sm-10 m-auto flwr-bknd border border-success border-5 p-5 rounded text-start">
               <br>
               <br>
               <br>
@@ -74,7 +75,9 @@
 
         <div class="row text-light">
           <div class="col-sm-6 m-auto p-3">
-            <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid rad border border-5" style="width: 700px">
+            <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7726.png" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid w-50 rad border border-5 custom-carousel-item" style="width: 700px; rotate: -30deg;">
+            <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7726.png" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid w-50 rad border border-5" style="width: 700px; rotate: -30deg;">
+            <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7726.png" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid w-50 rad border border-5" style="width: 700px; rotate: -30deg;">
           </div>
           <div class="col-sm-6 m-auto p-3">
             <h1 class="big">Countless Beautiful Flowers</h1>
@@ -88,7 +91,7 @@
             <h3>Hand crafted cement lawn statues made by Monty Tech's Masonry Shop</h3>
           </div>
           <div class="col-sm-6 m-auto p-3">
-            <img src="Website Files/assets/PLACEHOLDER.jpg" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder"  class="img-fluid rad border border-5" style="width: 700px">
+            <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/Alex_Statue.png" alt="Photo taken by: <DEVELOPER NAME>"  title="Alex Statue"  class="img-fluid w-50 rad border border-5" style="width: 700px">
           </div>
         </div>
 
