--- a/masonry.html
+++ b/masonry.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      img{
+        width: 10%;
+      }
+    </style>
     <link rel="stylesheet" href="Website Files/styles/style.css">
     <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet'>
     <link rel="icon" type="image/x-icon" href="Website Files/assets/MT Greenhouse Favicon.png">
@@ -63,35 +68,126 @@
     <th>Price</th>
   </tr>
   <tr>
-    <td><img src="Website Files/assets/Flowers/placeholder.png" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website Files\assets\masonry\20250505_130812.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Placeholder</td>
     <td>Placeholder</td>
   </tr>
   <tr>
-    <td><img src="Website Files/assets/Flowers/placeholder.png" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website Files\assets\masonry\20250505_130828.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Placeholder</td>
     <td>Placeholder</td>
   </tr>
   <tr>
-    <td><img src="Website Files/assets/Flowers/placeholder.png" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website Files\assets\masonry\20250505_131051.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Placeholder</td>
     <td>Placeholder</td>
   </tr>
   <tr>
-    <td><img src="Website Files/assets/Flowers/placeholder.png" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website Files\assets\masonry\20250505_131100.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Placeholder</td>
     <td>Placeholder</td>
   </tr>
   <tr>
-    <td><img src="Website Files/assets/Flowers/placeholder.png" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website Files\assets\masonry\20250505_131104.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Placeholder</td>
     <td>Placeholder</td>
   </tr>
   <tr>
-    <td><img src="Website Files/assets/Flowers/placeholder.png" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website Files\assets\masonry\20250505_131111.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Placeholder</td>
     <td>Placeholder</td>
   </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131114.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131116.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131122.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131131.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131135.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131146.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131148.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131151.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131154.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131155.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131159.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131206.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131210.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131228.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131235.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131333.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131336.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td><img src="Website Files\assets\masonry\20250505_131343.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  
 </table>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
