--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Website Files/styles/style.css">
-    <link rel="stylesheet" href="Website Files/styles/custom-carousel.css">
+    
     <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet'>
     <link rel="icon" type="image/x-icon" href="Website Files/assets/MT Greenhouse Favicon.png">
     <title>Monty Tech Greenhouse | Home</title> <!--DELETE "PROJECT" WHEN FINISHED-->
@@ -75,23 +75,32 @@
 
         <div class="row text-light">
           <div class="col-sm-6 m-auto p-3">
-            <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7726.png" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid w-50 rad border border-5 custom-carousel-item" style="width: 700px; rotate: -30deg;">
-            <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7726.png" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid w-50 rad border border-5" style="width: 700px; rotate: -30deg;">
-            <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7726.png" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid w-50 rad border border-5" style="width: 700px; rotate: -30deg;">
+            <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7757.png" alt="Photo taken by: <DEVELOPER NAME>"  title="Alex Statue"  class="img-fluid w-70 rad border border-5" style="width: 700px">
           </div>
           <div class="col-sm-6 m-auto p-3">
             <h1 class="big">Countless Beautiful Flowers</h1>
-            <h3>Our plants will make your house stand out in your neiborhood.</h3>
+            <h3>Our plants will make your house stand out in your neiborhood. For affordable prices, you can get hanging plants, grass, annuals and perennials.</h3>
           </div>
         </div>
 
         <div class="row text-light">
           <div class="col-sm-6 m-auto p-3">
             <h1 class="big">Hand-Made Statues</h1>
-            <h3>Hand crafted cement lawn statues made by Monty Tech's Masonry Shop</h3>
+            <h3>Hand crafted cement lawn statues made by Monty Tech's Masonry Shop will customize your yard your way. Quality statues opens up a world of story to your lawn!</h3>
           </div>
           <div class="col-sm-6 m-auto p-3">
             <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/Alex_Statue.png" alt="Photo taken by: <DEVELOPER NAME>"  title="Alex Statue"  class="img-fluid w-50 rad border border-5" style="width: 700px">
+          </div>
+        </div>
+
+        <div class="row text-light">
+          <div class="col-sm-6 m-auto p-3">
+            <img src="Website Files/assets/Clock.png" alt="Photo taken by: <DEVELOPER NAME>"  title="Alex Statue"  class="img-fluid w-50 rad" style="width: 700px">
+          </div>
+          <div class="col-sm-6 m-auto p-3">
+            <h1 class="big">Open <b>Monday</b> through <b>Friday</b></h1>
+            <h3>On <b>May 8th</b>, come down and see the flowers on public opening day from <b>11:00am-1:00pm</b> or <b>May 9th</b> from <b>12:00pm-1:30pm</b>. The greenhouse is open through <b>May 31st</b>.</h3>
+            <p>*If you are a <b>Monty Tech Staff member</b>, you may come down on <b>May 8th</b> from <b>3:00pm-5:00pm</b></p>
           </div>
         </div>
 
@@ -111,5 +120,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="Website Files/scripts/script.js"></script>
+    
 </body>
 </html>
