--- a/plants.html
+++ b/plants.html
@@ -399,74 +399,17 @@
     </table>
   </div>
 
-  <h2> Plant Names, Prices, and Pictures </h2>
 
-  <table>
-    <tr>
-      <th>Fern Collection</th>
-      <th> Placeholder</th>
-      <th>Placeholder</th>
-    </tr>
-    <tr>
-      <td>Sunmagic Echinacea Collection </td>
-      <td> Multi-liner Boldness</td>
-      <td>Multi-liner The Patriot </td>
-    </tr>
-    <tr>
-      <td>Trixi-Liner Crystallize</td>
-      <td>Trixi-liner Geisha Girl</td>
-      <td>Trixi-liner Starlight Starbright</td>
-    </tr>
-    <tr>
-      <td>Multi-Liner Passion Combos Blackberry Tart</td>
-      <td>Multi-Liner Disco Inferno</td>
-      <td> Companion Foliage-Dracaena indivisia</td>
-    </tr>
-    <tr>
-      <td>Companion Foliage-Little Prince Cyperus</td>
-      <td>Companion Foliage-Ipomoea Marguerite</td>
-      <td>Companion Foliage-Ipomoea Blackie</td>
-    </tr>
-    <tr>
-      <td>Chameleon Series Calibrachoa Sunshine Berry</td>
-      <td>Chameleon Series Calibrachoa Bluberry Scone</td>
-      <td>Bloomtastic Series Calibrachoa Bloomtastic Yellow</td>
-    </tr>
-    <tr>
-      <td> Mini Famous Neo Series Calibrachoa Neo Light Pink & Eye</td>
-      <td> Coleus Trailing Series-Burgundy Wedding</td>
-      <td> Coleus Trailing Series Trailing Purple Heart</td>
-    </tr>
-    <tr>
-      <td> Cuphea Hummingbirds Lunch</td>
-      <td>Fushia-Hanging Series Blue Eyes </td>
-      <td>Fushia-Hanging Series Dark Eyes </td>
-    <tr>
-      <td> Fuschia-Hanging Series Marinka</td>
-      <td> Fushcia-Hanging Series Swingtime</td>
-      <td>Geranium- Americana Series Americana Bright Red </td>
-    </tr>
-    <tr>
-      <td> Geranium-Americana Series Americana White</td>
-      <td> Lobelia Hot water blue</td>
-      <td> Lobelia Hot Snow White</td>
-    </tr>
-    <td>Petunia Capella Series Capella Coral </td>
-    <td> Petunia Capella Series Capella White</td>
-    <td>Petunia Capella Series Capella Hello Yellow </td>
-    </tr>
-    <tr>
-      <td> Petunia Capella Series Capella Indigo </td>
-      <td>Sufina Trailing Series Heavenly Blackberries and Cream </td>
-      <td> Surfina Trailing Series Wild Plum</td>
-    </tr>
-    <tr>
-      <td> Amore Series Amore Heart and Soul </td>
-    </tr>
-    </tr>
-  </table>
-
-
+  <footer class="bg-success m-auto border-top p-3 border-warning border-5 text-light">
+    <div class="row text-light">
+      <div class="col-sm-6 m-auto p-3 text-start">
+        <a href="#" class="text-light no-underline">Top of Page</a>
+      </div>
+      <div class="col-sm-6 m-auto p-3 text-end">
+        <a href="team.html" class="text-light no-underline">2025 | UniversalDummy, asep3192, zachary17556, CocoCrawlt</a>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
