--- a/gallery.html
+++ b/gallery.html
@@ -387,6 +387,7 @@
 
         </div>
     -->
+</div>
         <footer class="bg-success m-auto border-top p-3 border-warning border-5 text-light">
             <div class="row text-light">
               <div class="col-sm-6 m-auto p-3 text-start">
@@ -400,3 +401,6 @@
       
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
           <script src="Website Files/scripts/script.js"></script>
+
+</body>
+</html>
