--- a/masonry.html
+++ b/masonry.html
@@ -107,8 +107,22 @@
   </tr>
   
 </table>
+<br>
+<br>
+<br>
+<footer class="bg-success m-auto border-top p-3 border-warning border-5 text-light">
+  <div class="row text-light">
+    <div class="col-sm-6 m-auto p-3 text-start">
+      <a href="#" class="text-light no-underline">Top of Page</a>
+    </div>
+    <div class="col-sm-6 m-auto p-3 text-end">
+      <a href="team.html" class="text-light no-underline">2025 | UniversalDummy, asep3192, zachary17556, CocoCrawlt</a>
+    </div>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="Website Files/scripts/script.js"></script>
+
 </body>
 </html>
